@@ -4,6 +4,11 @@
 	  src/stm8/peeph.def,
 	  support/regression/tests/z88dk_callee.c:
 	  Improve tail call optimization for __z88dk_callee functions.
+	* tests/stm8-conventions.c:
+	  Enable test that had been disabled due to now-fixed bug #3239.
+	* src/stm8/peep.c,
+	  support/regression/tests/bug-3256.c:
+	  Fix bug #3256.
 
 2021-06-15 Philipp Klaus Krause <pkk AT spth.de>
 
